<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>${groupId}</groupId>
	<artifactId>${artifactId}</artifactId>
	<version>${version}</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<wonder.version>7.4</wonder.version>
	</properties>
	<pluginRepositories>
		<pluginRepository>
			<id>wocommunity.releases</id>
			<name>WOCommunity Releases</name>
			<releases>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>https://maven.wocommunity.org/content/groups/public/</url>
		</pluginRepository>
	</pluginRepositories>
	<repositories>
		<repository>
			<id>wocommunity.releases</id>
			<name>WOCommunity Releases</name>
			<releases>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>https://maven.wocommunity.org/content/groups/public/</url>
		</repository>
	</repositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.10.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>wonder.core</groupId>
			<artifactId>ERExtensions</artifactId>
			<version>${wonder.version}</version>
		</dependency>
		<dependency>
			<groupId>wonder.core</groupId>
			<artifactId>ERPrototypes</artifactId>
			<version>${wonder.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.32</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.3.232</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>wonder.plugins</groupId>
			<artifactId>H2PlugIn</artifactId>
			<version>${wonder.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>Sources</sourceDirectory>
		<testSourceDirectory>Tests</testSourceDirectory>
		<resources>
			<resource>
				<targetPath>Resources</targetPath>
				<directory>Components</directory>
			</resource>
			<resource>
				<targetPath>Resources</targetPath>
				<directory>Resources</directory>
			</resource>
			<resource>
				<targetPath>WebServerResources</targetPath>
				<directory>WebServerResources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<compilerArgs>
						<compilerArg>--add-exports</compilerArg>
						<compilerArg>java.base/sun.security.action=ALL-UNNAMED</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<?m2e ignore?>
				<groupId>io.github.wocommunity</groupId>
				<artifactId>wolifecycle-maven-plugin</artifactId>
				<version>2.7</version>
				<extensions>true</extensions>
			</plugin>
		</plugins>
	</build>
</project>
